[package]
name = "sand_commands"
version = "0.1.0"
edition = "2021"

[dependencies]
ctor = "0.2.9"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
zip = "2.2.2"
