[package]
name = "sand_commands"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "sand_commands"

[dependencies]
fastnbt = "2.5.0"
mcdata = { version = "0.4.0", features = ["1.20.5", "entities", "block-entities", "block-states"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
